--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,12 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "esnext",
+    "module": "CommonJS", //"esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx", //"preserve",
+    "baseUrl": ".", //new
     "incremental": true,
     "plugins": [
       {
