--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,12 +8,11 @@
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
-    "module": "CommonJS", //"esnext",
+    "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react-jsx", //"preserve",
-    "baseUrl": ".", //new
+    "jsx": "preserve",
     "incremental": true,
     "plugins": [
       {
